[gd_scene load_steps=2 format=3 uid="uid://dpaf68yo1s2a6"]

[ext_resource type="Script" path="res://src/system/setting/setting.gd" id="1_m8wkr"]

[node name="Setting" type="Window"]
title = "{window_setting}"
initial_position = 1
size = Vector2i(800, 500)
unresizable = true
script = ExtResource("1_m8wkr")

[node name="TabContainer" type="TabContainer" parent="."]
custom_minimum_size = Vector2(450, 250)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="{set_general}" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2

[node name="Language" type="HBoxContainer" parent="TabContainer/{set_general}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_general}/Language"]
layout_mode = 2
text = "{lbl_setting_language}"

[node name="OptionButton" type="OptionButton" parent="TabContainer/{set_general}/Language"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 3
selected = 0
popup/item_0/text = "简体中文"
popup/item_0/id = 0
popup/item_1/text = "繁体中文"
popup/item_1/id = 1
popup/item_1/disabled = true
popup/item_2/text = "English"
popup/item_2/id = 2

[node name="TotalSound" type="HBoxContainer" parent="TabContainer/{set_general}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_general}/TotalSound"]
layout_mode = 2
text = "{lbl_setting_sound}"

[node name="CheckButton" type="CheckButton" parent="TabContainer/{set_general}/TotalSound"]
layout_mode = 2
size_flags_horizontal = 10
disabled = true

[node name="CheackUpdate" type="HBoxContainer" parent="TabContainer/{set_general}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_general}/CheackUpdate"]
layout_mode = 2
text = "{lbl_cheack_update}"

[node name="Button" type="Button" parent="TabContainer/{set_general}/CheackUpdate"]
layout_mode = 2
size_flags_horizontal = 10
text = "{btn_cheack_update}"

[node name="{set_view}" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="FullScreen" type="HBoxContainer" parent="TabContainer/{set_view}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_view}/FullScreen"]
layout_mode = 2
text = "{lbl_setting_fullscreen}"

[node name="CheckButton" type="CheckButton" parent="TabContainer/{set_view}/FullScreen"]
layout_mode = 2
size_flags_horizontal = 10

[node name="Resolution" type="HBoxContainer" parent="TabContainer/{set_view}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_view}/Resolution"]
layout_mode = 2
text = "{lbl_setting_resolution}"

[node name="OptionButton" type="OptionButton" parent="TabContainer/{set_view}/Resolution"]
layout_mode = 2
size_flags_horizontal = 10
item_count = 6
selected = 0
popup/item_0/text = "{customize}"
popup/item_0/id = 999
popup/item_1/text = "1920×1080"
popup/item_1/id = 0
popup/item_2/text = "1600×900"
popup/item_2/id = 1
popup/item_3/text = "1366×768"
popup/item_3/id = 2
popup/item_4/text = "1360×768"
popup/item_4/id = 3
popup/item_5/text = "1280×720"
popup/item_5/id = 6

[node name="Scale" type="HBoxContainer" parent="TabContainer/{set_view}"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/{set_view}/Scale"]
layout_mode = 2
text = "{lbl_setting_ui_scale}"

[node name="HSlider" type="HSlider" parent="TabContainer/{set_view}/Scale"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
min_value = 0.5
max_value = 2.0
step = 0.01
value = 0.5

[connection signal="close_requested" from="." to="." method="_on_close_setting_requested"]
[connection signal="item_selected" from="TabContainer/{set_general}/Language/OptionButton" to="." method="_on_lang_option_button_item_selected"]
[connection signal="pressed" from="TabContainer/{set_general}/CheackUpdate/Button" to="." method="_on_update_button_pressed"]
[connection signal="pressed" from="TabContainer/{set_view}/FullScreen/CheckButton" to="." method="_on_full_screen_button_pressed"]
[connection signal="item_selected" from="TabContainer/{set_view}/Resolution/OptionButton" to="." method="_on_resolution_option_item_selected"]
[connection signal="value_changed" from="TabContainer/{set_view}/Scale/HSlider" to="." method="_on_ui_scale_value_changed"]
